feat(maven): prepare-assertion-agent goal — completes build-time weaving auto-wiring
Mirrors the Gradle plugin's assertion-agent auto-attach on the Maven side.

- PrepareAssertionAgentMojo (goal prepare-assertion-agent, bound to initialize,
  threadSafe): resolves the agent jar from ${plugin.artifactMap} (default key
  io.github.lemonlion:kronikol4j-assertj-agent, now declared as a plugin dependency)
  and prepends "-javaagent:<jar> -Dnet.bytebuddy.experimental=true" to the argLine
  project property Surefire/Failsafe read — the jacoco:prepare-agent pattern. Opt out
  with -Dkronikol.skipAssertionAgent=true.
- Pure AssertionAgentArgLine helper for the arg-line computation; wired into the Mojo
  and the hand-authored plugin.xml descriptor (new mojo entry).
- Plugin now depends on kronikol4j-assertj-agent so its jar is in plugin.artifactMap.

Proven by AssertionAgentArgLineTest (prepend/preserve/blank/null) +
PrepareAssertionAgentMojoTest (resolves jar -> sets argLine, prepends to existing,
skip no-op, missing-agent no-op). Full build green.

Closes Build-time weaving auto-wiring ([x]): the assertion agent is now auto-attached
on both Gradle and Maven; .NET's compile-time rewriters (StepTracking IL weave,
AssertionRewriter source rewrite) remain the documented C#-IL/source-AST boundary.
Updates ledger + CHANGELOG.